src/objects/Email_Priority__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Define the priority if the client sends the same email to different  recipient, for example, &quot;info@lampiris.be&quot; and &quot;move@lampiris.be&quot;, in this situation we will create a signle case into &quot;Move queue&quot;. The address &quot;info@lampiris.be&quot; will be ignored.</description>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>The Email address wich will be routed to the according Queue</description>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the email address used when we route the case to the appropriate queue</description>
        <label>Priority</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Email Priority</label>
</CustomObject>